--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ section {
     text-decoration: underline;
 
     font-size: 2.7em;
-    margin-bottom: 30px;
+    padding: 20px;
 }
 
 .flavors {
