--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
 * {
+    box-sizing: border-box;
+
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    transition-duration: 0.3s;
 }
 
 :root {
@@ -14,11 +16,12 @@
 
 @font-face {
     font-family: 'secular';
-    src: url('fonts/SecularOne-Regular.ttf');
+    src: url('../fonts/SecularOne-Regular.ttf');
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 button {
@@ -49,9 +52,6 @@ header h1 {
 
 header .login {
     position: absolute;
-}
-
-header .login {
     right: 40px;
 }
 
@@ -80,7 +80,7 @@ header button:active {
 }
 
 .bg {
-    background-image: url('assets/bg.jpg');
+    background-image: url('../assets/bg.jpg');
     background-position: center;
     background-size: cover;
 
@@ -105,6 +105,35 @@ section {
     box-shadow: inset #00000044 0 0 40px;
 }
 
+.cart {
+    background-color: var(--cor1);
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 60px;
+    height: 60px;
+    right: 5vw;
+    bottom: 5vh;
+    border-radius: 100%;
+}
+
+.cart:hover {
+    background-color: #c00f32;
+}
+
+.cart img {
+    width: 70%;
+    padding-right: 2px;
+
+    filter: opacity(0.5);
+}
+
+.cart:hover img {
+    filter: opacity(1);
+}
+
 .mainContent h2 {
     text-decoration: underline;
 
@@ -124,11 +153,10 @@ section {
     background-color: white;
     color: black;
 
-    width: 400px;
+    width: 350px;
     border-radius: 20px;
     margin: 10px;
     padding: 10px;
-    transition-duration: 0.3s;
 }
 
 .flavor img {
@@ -211,16 +239,22 @@ section {
 
 @media (max-width: 500px) {
     header h1 {
-        font-size: 1.5em;
-        margin-left: 20px;
+        font-size: 1.3em;
+        margin-left: 10px;
+    }
+
+    header .login {
+        position: absolute;
+        right: 10px;
     }
 
     header button {
-        font-size: 1em;
+        font-size: 0.8em;
     }
 
     .mainContent {
-        padding: 0;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .mainContent h2 {
@@ -228,7 +262,9 @@ section {
     }
 
     .flavor img {
-        width: 80%;
+        object-fit: cover;
+
+        width: 100%;
         height: 200px;
     }
 
