--- a/styles/login.css
+++ b/styles/login.css
@@ -27,11 +27,10 @@ main {
 }
 
 .card input {
+    margin: 10px 0;
     width: 100%;
     height: 40px;
-    padding: 3px;
-    margin-bottom: 20px;
-    border-radius: 5px;
+    padding: 10px;
 }
 
 .card a {
