--- a/styles/menu.css
+++ b/styles/menu.css
@@ -265,9 +265,12 @@ hr {
         color: white;
         font-weight: bolder;
 
-        font-size: 1.5em;
-        width: 50px;
+        font-size: 1em;
+        width: 40px;
+        height: 40px;
         right: 30px;
+        border-radius: 50%;
+
         transform: translateY(-25%);
     }
 
