--- a/styles/menu.css
+++ b/styles/menu.css
@@ -19,25 +19,26 @@ main {
 
 .content {
     width: 70vw;
-    height: 78%;
 }
 
 nav {
+    display: flex;
+
+    height: 7%;
+
     border: #00000049 solid 1px;
 }
 
-.rowMenu {
-    display: flex;
-}
-
-.rowMenu button {
+nav button {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 
-    width: 150px;
+    width: 100%;
+    height: 100%;
     font-size: 1em;
     padding: 10px 15px;
     margin: 0;
+
     border-left: #00000049 solid 1px;
     border-right: #00000049 solid 1px;
 }
@@ -72,7 +73,7 @@ nav {
     overflow-y: scroll;
     overflow-x: hidden;
 
-    height: 100%;
+    height: 78%;
     gap: 1%;
     padding: 10px;
 }
@@ -223,7 +224,13 @@ hr {
 @media (max-width: 425px) {
     .content {
         width: 100vw;
-        height: 74%;
+    }
+
+    .pizzas,
+    .sobremesas,
+    .bebidas {
+        height: 71%;
+        padding: 10px;
     }
 
     .menuOptionCardInfo h4 {
@@ -244,7 +251,8 @@ hr {
         position: fixed;
 
         bottom: 0;
-        width: 100vw;
+        width: 100%;
+        height: 7%;
     }
 
     .cartMobile button {
@@ -252,7 +260,7 @@ hr {
         font-weight: bolder;
 
         width: 100%;
-        padding: 15px;
+        height: 100%;
     }
 
     .cartMobilePopUp {
