--- a/styles/menu.css
+++ b/styles/menu.css
@@ -36,7 +36,6 @@ nav button {
     width: 100%;
     height: 100%;
     font-size: 1em;
-    padding: 10px 15px;
     margin: 0;
 
     border-left: #00000049 solid 1px;
@@ -226,10 +225,14 @@ hr {
         width: 100vw;
     }
 
+    .row {
+        height: 10%;
+    }
+
     .pizzas,
     .sobremesas,
     .bebidas {
-        height: 71%;
+        height: 76%;
         padding: 10px;
     }
 
