--- a/styles/menu.css
+++ b/styles/menu.css
@@ -22,20 +22,19 @@ main {
 }
 
 nav {
+    border: #00000049 solid 1px;
     display: flex;
 
     height: 7%;
-
-    border: #00000049 solid 1px;
 }
 
 nav button {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', sans-serif;
     font-weight: bold;
 
     width: 100%;
     height: 100%;
-    font-size: 1em;
+    font-size: 0.9em;
     margin: 0;
 
     border-left: #00000049 solid 1px;
@@ -225,15 +224,10 @@ hr {
         width: 100vw;
     }
 
-    .row {
-        height: 10%;
-    }
-
     .pizzas,
     .sobremesas,
     .bebidas {
-        height: 76%;
-        padding: 10px;
+        height: 71%;
     }
 
     .menuOptionCardInfo h4 {
@@ -254,7 +248,7 @@ hr {
         position: fixed;
 
         bottom: 0;
-        width: 100%;
+        width: 100vw;
         height: 7%;
     }
 
