--- a/styles/menu.css
+++ b/styles/menu.css
@@ -23,20 +23,20 @@ main {
 
 nav {
     border: #00000049 solid 1px;
-    display: flex;
-
-    height: 7%;
 }
 
-nav button {
-    font-family: 'Segoe UI', sans-serif;
+.rowMenu {
+    display: flex;
+}
+
+.rowMenu button {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 
-    width: 100%;
-    height: 100%;
-    font-size: 0.9em;
+    width: 150px;
+    font-size: 1em;
+    padding: 10px 15px;
     margin: 0;
-
     border-left: #00000049 solid 1px;
     border-right: #00000049 solid 1px;
 }
@@ -68,10 +68,9 @@ nav button {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow: scroll;
 
-    height: 78%;
+    height: 75%;
     gap: 1%;
     padding: 10px;
 }
@@ -224,12 +223,6 @@ hr {
         width: 100vw;
     }
 
-    .pizzas,
-    .sobremesas,
-    .bebidas {
-        height: 71%;
-    }
-
     .menuOptionCardInfo h4 {
         font-size: 0.8em;
     }
@@ -249,7 +242,6 @@ hr {
 
         bottom: 0;
         width: 100vw;
-        height: 7%;
     }
 
     .cartMobile button {
@@ -257,7 +249,7 @@ hr {
         font-weight: bolder;
 
         width: 100%;
-        height: 100%;
+        padding: 15px;
     }
 
     .cartMobilePopUp {
