--- a/styles/menu.css
+++ b/styles/menu.css
@@ -31,7 +31,7 @@ nav {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 
-    width: 150px;
+    width: 100%;
     font-size: 1em;
     padding: 10px 15px;
     margin: 0;
@@ -69,7 +69,6 @@ nav {
 
     gap: 1%;
     padding: 10px;
-    padding-bottom: 50px;
 }
 
 .menuOptionCard {
@@ -220,6 +219,12 @@ hr {
 @media (max-width: 425px) {
     .content {
         width: 100vw;
+    }
+
+    .pizzas,
+    .sobremesas,
+    .bebidas {
+        padding-bottom: 50px;
     }
 
     .menuOptionCardInfo h4 {
