--- a/styles/menu.css
+++ b/styles/menu.css
@@ -58,8 +58,7 @@ nav {
 }
 
 .pizzas,
-.sobremesas,
-.bebidas {
+.sobremesas {
     background-color: #d6d6d6;
     display: flex;
     flex-wrap: wrap;
