--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,17 @@
     src: url('../fonts/SecularOne-Regular.ttf');
 }
 
+::-webkit-scrollbar {
+    background-color: var(--cor2);
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: crimson;
+
+    border-radius: 100px;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--cor2);
